--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <i class="fas fa-phone-alt"></i> Ligue agora e Agende Seu Exame: <a href="(083) 3214-4233">(083) 3214-4233</a> ou <a href="(83) 3214-4234">(83) 3214-4234</a></p>
             </div>
 
+
         <div id=menu>
             <nav>
                     <input class="menu-btn" type="checkbox" id="menu-btn" />
@@ -39,7 +40,6 @@
             </div>
 
     </div>
-
 </header>
 
 <body>
@@ -157,7 +157,6 @@
                     </div>
                 </form>
             </div>
-            <div></div>
         </section>
         <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3959.0934985865174!2d-34.88013359029775!3d-7.115162972333802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ace7e68af0f129%3A0xd7131d481e436e09!2sCentro+M%C3%A9dico+Tambi%C3%A1!5e0!3m2!1spt-BR!2sbr!4v1565593160141!5m2!1spt-BR!2sbr" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
@@ -188,8 +187,21 @@
     </div>
 
 
-</body>
+
+        <div id='redessociais'>
+                <div class="facebook">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                </div>
+                <div class="instagram">
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+                <div class="youtube">
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+        </body>
+
 <footer>
-    <p>Copyright © 2019  - CENTRO MÉDICO TAMBIÁ - Todos os direitos reservados.</p>
+    <div><p>Copyright © 2019  - CENTRO MÉDICO TAMBIÁ - Todos os direitos reservados.</p></div>
 </footer>
 </html>
